# aws-test

./: .gitignore  CMakeLists.txt  Makefile  README.md  devenv  main.cpp
kinesis-stream/: kinesis.tf
